
2015-07-24 - TAQ
	Converted all source to use stdint types.

2015-08-01 - TAQ
	Autoconf conversion begins.
	proto/byteswap.c, proto/proto.h - Moved a bunch of stuff out of proto.h into byteswap.c.  Cleaned up server_notice packet handling.

2015-08-10 - TAQ
	client/cache.h - We need a basic object cache without a parser hooked to it, for the general object cache (a geometry, hooked to a texture, with a specific ID value).  So we now have the BasicCache, and the derived ParsedCache, which still functions as before.

2015-08-22 - TAQ
	test/ - Started adding unit tests for each of our components.  We're using Google Test and Google Mock for our test framework, and we're also using the gtest-tap-listener from https://github.com/kinow/gtest-tap-listener

2015-08-23 - TAQ
	xerces-c/, eigen/ - Removed bundled xerces and eigen distributions.  They're common-ish libraries, and are not hard to install, particularly for a developer.  Having them in our distribution just bloats things unnecessarily.  The libGLw subpackage will stay for the time being, since it seems a bit less common (since everybody hates Xt nowadays).

2015-09-06 - TAQ
	server/classes/modules/db.h, server/classes/modules/db.cc, server/classes/modules/mysql.cc, server/classes/modules/pgsql.cc - Added C-linked wrappers, so we can continue to use the library without having to populate a vtable (in some unportable way).
	server/classes/modules/language.h, server/classes/language.cc - Added C-linked wrappers for these too.

2015-09-07 - TAQ
	client/cache.h - It turned out that we didn't have any real way to insert things into the cache.  Instead of throwing an exception on a missing element, we'll now follow the lead of the C++ unordered_map object, and return a default object reference out of the index operator method, suitable for assignment.